--- a/findly-builder/src/app/components/results-rules/results-rules.component.html
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.html
@@ -86,7 +86,7 @@
     </div>
     <div class="header-sec">
         <div class="kr-sg-input-search">                               
-            <input type="text" placeholder="Search" class="input-search" [(ngModel)]="searchFaq" id="searchFaqs" name='faqsSearch' (keyup)="searchFaqs()">
+            <input type="text" placeholder="Search" class="input-search" id="searchFaqs" name='faqsSearch'>
             <img src="assets/icons/search-gray.svg" class="search-icon">
         </div>
         <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
