--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -60,7 +60,7 @@
               [ngClass]="{'assending': (selectedSort==='name') && isAsc,'decending':(selectedSort==='name') && !isAsc}"
               class="ml-1 sortImg"></div>
           <div class="col d-flex align-items-center" (click)="sortBy('type')">Type<span
-              class="selected-length-doc-web hide">(2)</span>
+              class="selected-length-doc-web hide">({{this.filterSystem.typefilter}})</span>
             <div class="kr-sg-dropdowns type_sort_dropdown" #sourceFilter="ngbDropdown" ngbDropdown [container]="'body'"
               [autoClose]="true" [placement]="'bottom-right'">
               <div class="dropdown dropdown-open">
@@ -69,7 +69,7 @@
                     [ngClass]="{'assending': (selectedSort==='type') && isAsc,'decending':(selectedSort==='type') && !isAsc}"
                     class="ml-1 sortImg"></button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li><span class="list-name" (click)="sourceFilter.close();filterTable('all','type')">All</span><img class="hide" src="assets/icons/check-blue.svg"></li>
+                  <li (click)="sourceFilter.close();filterTable('all','type')"><span class="list-name" >All</span><img class="hide" src="assets/icons/check-blue.svg"></li>
                   <li *ngFor="let docType of docTypeArr" (click)="sourceFilter.close();filterTable(docType,'type')">
                     <span class="list-name">{{docType == 'webdomain' ? 'Web' :(docType == 'document'? 'Doc': '')}}</span><img class="hide" src="assets/icons/check-blue.svg"></li>
                 </ul>
@@ -78,7 +78,7 @@
           </div>
           <!-- <div class="col" (click)="sortBy('collection')">Collection <img src="assets/icons/caretDown.svg" class="ml-1"></div> -->
           <div class="col d-flex align-items-center" (click)="sortBy('recentStatus')">Status<span
-              class="selected-length-doc-web hide">(2)</span>
+              class="selected-length-doc-web hide">({{this.filterSystem.statusFilter}})</span>
             <div class="kr-sg-dropdowns type_sort_dropdown" #statusFilter="ngbDropdown" ngbDropdown [container]="'body'"
               [autoClose]="true" [placement]="'bottom-right'">
               <div class="dropdown dropdown-open">
@@ -87,7 +87,7 @@
                     [ngClass]="{'assending': (selectedSort==='recentStatus') && isAsc,'decending':(selectedSort==='recentStatus') && !isAsc}"
                     class="ml-1 sortImg"></button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li><span class="list-name" (click)="sourceFilter.close();filterTable('all','recentStatus')">All</span><img class="hide"  src="assets/icons/check-blue.svg"></li>
+                  <li (click)="sourceFilter.close();filterTable('all','recentStatus')"><span class="list-name" >All</span><img class="hide"  src="assets/icons/check-blue.svg"></li>
                   <li *ngFor="let status of statusArr"
                     (click)="statusFilter.close();filterTable(status,'recentStatus')"><span class="list-name" >{{status == 'success' ? 'Success' : (status == 'failed' ? 'Fail' : 'In Progress')}}<img class="hide"  src="assets/icons/check-blue.svg"></span>
                     </li>
