--- a/findly-builder/src/app/components/manage-intent/manage-intent.component.html
+++ b/findly-builder/src/app/components/manage-intent/manage-intent.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="body-content">
-    <div class="info-title" *ngIf="isEmpty">Build your bot's knowledge collection by adding FAQs or by importing from file.</div>
+    <div class="" *ngIf="isEmpty">Build your bot's knowledge collection by adding FAQs or by importing from file.</div>
     <!-- EMPTY SCREEN STYLES -->
     <div class="empty-faqs-sec" *ngIf="isEmpty">
       <img src="assets/images/icons/empty_ill.svg">
