--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -37,7 +37,7 @@
                   <div class="created-date">{{source.lMod | dateFormatPipe}}</div>
                   <div class="actions-delete">                   
                     <span class="actions-links d-none"><img class="action_icon" src="assets/icons/sidemenu/table-refresh.svg"></span>
-                    <span class="actions-links" (click)="deletePages('source',source,$event)"><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
+                    <span class="actions-links" (click)="deletePages('source',source,$event)" ngbTooltip='delete' ><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
                 </div>
                 </div>
               </div>
