--- a/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
@@ -7061,9 +7061,9 @@ body, html{
     clear: both;
     /* padding: 20px; */
     /* padding: 20px 20px 20px 45px; */
-    padding: 0px 20px 20px 1px;
+    padding: 0px 0px 20px 0px;
     /* width: 80%; */
-    width: 90%;
+    width: 100%;
  }
 .search-container.conversation #searchChatContainer .messageBubble .botMessage{
     background: #F8F9FA;
@@ -7084,7 +7084,7 @@ body, html{
 .search-container.conversation #searchChatContainer .messageBubble .botMessage .bot_Img{
     position: absolute;
     left: 11px;
-    margin-top: 1px;
+    margin-top: -1px;
 }
 .search-container.conversation #searchChatContainer .messageBubble .messageBubble-content{
     display: inline-block;
@@ -7110,6 +7110,7 @@ body, html{
     z-index: auto;
     background: #FFFFFF;
     border-radius: 15px 15px 0 0; 
+    box-shadow: -7px 4px 30px rgba(18, 61, 101, 0.2), inset -8px -6px 80px rgba(255, 255, 255, 0.18);
 }
 .search-container.active #searchBox {
     display: block;
@@ -7772,7 +7773,7 @@ html , body{
 .Search-BG-Copy .recentContainer .recentSearch .recentCloseIcon{
     position: absolute;    
     left: 0;   
-    top: 3px;
+    top: 5px;
     cursor: pointer !important;
 }
 .Search-BG-Copy .recentContainer .recentSearch .recentText{
@@ -8358,7 +8359,7 @@ html , body{
     background: #E7F1FF;
     border: 1px solid #85B7FE;
     border-radius: 4px;
-    color: #07377F;
+    color: #0D6EFD;
     max-width: 180px;
     overflow: hidden;
     white-space: nowrap;
@@ -8383,7 +8384,7 @@ html , body{
     background: #E7F1FF;
     border: 1px solid #85B7FE;
     border-radius: 4px;
-    color: #07377F;
+    color: #0D6EFD;
     max-width: 180px;
     overflow: hidden;
     white-space: nowrap;
@@ -8616,6 +8617,9 @@ ngb-accordion .card-header {
     color: #161928;
     text-decoration: none;
     font-size: 14px;
+}
+.ksa-results-tabesHeader{
+    padding-left: 15px;
 }
 .ksa-results-tabesHeader .title-backbutton {
     display: flex;
@@ -9250,3 +9254,132 @@ body::-webkit-scrollbar {
 .action-wrp{
     display: inline;
 }
+.matched-faq-containers{
+    margin-bottom: 23px;
+}
+.matched-faq-containers .faqs-shadow {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.07), 0px 0px 10.0172px rgba(0, 0, 0, 0.035);
+    border-radius: 8px;
+    margin-bottom: 19px;
+    display: block;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-wrp-content {
+    padding: 16px 20px;
+    box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.07), 0px 0px 10.0172px rgba(0, 0, 0, 0.035);
+    border-radius: 8px;
+    display: inline-block;
+    width: 100%;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-wrp-content .title {
+    font-weight: 600;
+    font-size: 14px;
+    margin-bottom: 8px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    color: #161928;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-wrp-content .title .accordion {
+    color: #161928;
+    font-weight: 600;
+    padding: 0;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-wrp-content .title .accordion:before{
+      display: none;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-wrp-content .title .panel{
+    padding: 0px;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-wrp-content .title .panel  .content-inner{
+    color: #161928;
+    font-weight: 400;
+    margin: 20px 0 0 0;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-wrp-content .desc-info {
+    font-weight: normal;
+    font-size: 12px;
+    color: #979797;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 100%;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-bottom-actions {
+    padding: 8px 0px 8px 0px;
+    position: relative;
+    display: none;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-bottom-actions .appearences {
+    display: inline-block;
+    width: 59%;
+    padding-left: 20px;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-bottom-actions .appearences img {
+    vertical-align: middle;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-bottom-actions .appearences .appearences-count {
+    margin-left: 10px;
+    font-weight: 500;
+    font-size: 12px;
+    color: #9B9B9B;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-bottom-actions .actions {
+    display: inline-block;
+    width: 40%;
+    text-align: right;
+    padding-right: 20px;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-bottom-actions .actions span.img-action {
+    padding: 6px 0;
+    width: 26px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s all ease;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-bottom-actions .actions span.img-action:hover{
+    background: #E7F1FF;
+  }
+  .matched-faq-containers .faqs-shadow .faqs-bottom-actions .actions span.img-action.active {
+    background: #E7F1FF;
+  }
+  
+  .matched-pages-container .faqs-shadow .faqs-wrp-content {
+    padding: 20px 20px;
+    display: table;
+  }
+  .matched-pages-container .faqs-shadow .faqs-wrp-content .image-url-sec {
+    display: inline-block;
+    width: 24%;
+    float: left;
+  }
+  .matched-pages-container .faqs-shadow .faqs-wrp-content .image-url-sec img {
+    width: 100%;
+  }
+  .matched-pages-container .faqs-shadow .faqs-wrp-content .pages-content {
+    display: inline-block;
+    width: 74%;
+    padding-left: 23px;
+    position: relative;
+    top: -2px;
+    float: left;
+  }
+  .matched-pages-container .faqs-shadow .faqs-wrp-content .pages-content .title {
+    overflow: auto;
+    white-space: normal;
+    text-overflow: ellipsis;
+    max-width: 100%;
+  }
+  .matched-pages-container .faqs-shadow .faqs-wrp-content .pages-content .desc-info {
+    overflow: auto;
+    white-space: normal;
+    text-overflow: ellipsis;
+    max-width: 100%;
+  }
+  
+  .show-in-findly{
+      display: none;
+  }
