--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -14,9 +14,9 @@
             <span *ngIf="!searchSources" class="search-name"><img class="search-img"
                 src="assets/icons/sidemenu/search-table.svg"></span>
           </div>
-            <div *ngIf="currentView === 'list'" class="grid-list-view-table" (click)="currentView='grid'"><img
+            <div *ngIf="currentView === 'list'" class="grid-list-view-table" (click)="currentView='grid'" ngbTooltip='Grid'><img
             src="assets/icons/grid-view.svg"></div>
-            <div *ngIf="currentView === 'grid'" class="grid-list-view-table" (click)="currentView='list'"><img
+            <div *ngIf="currentView === 'grid'" class="grid-list-view-table" (click)="currentView='list'" ngbTooltip='List'><img
             src="assets/icons/list-view.svg">
             </div>
       </div>
