--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -49,9 +49,9 @@
             </ul>
           </div>
         </div>
-        <div *ngIf="currentView === 'list'" class="grid-list-view-table" (click)="currentView='grid'"><img
+        <div *ngIf="currentView === 'list'" class="grid-list-view-table" (click)="currentView='grid'" ngbTooltip='Grid'><img
             src="assets/icons/grid-view.svg"></div>
-        <div *ngIf="currentView === 'grid'" class="grid-list-view-table" (click)="currentView='list'"><img
+        <div *ngIf="currentView === 'grid'" class="grid-list-view-table" (click)="currentView='list'" ngbTooltip='List'><img
             src="assets/icons/list-view.svg"></div>
       </div>
       <section class="table-content" *ngIf="currentView === 'list'">
@@ -118,7 +118,7 @@
               <div class="col text-right last-child">
                 <span class="actions-links d-none"><img class="action_icon" src="assets/icons/refresh-table.svg"></span>
                 <span class="actions-links" (click)="deletePages('source',source,$event)"><img class="action_icon"
-                    src="assets/icons/delete-table.svg"></span>
+                    src="assets/icons/delete-table.svg" ngbTooltip='delete' placement='left'></span>
               </div>
             </div>
           </ng-container>
@@ -152,8 +152,8 @@
                       {{source.createdOn | dateFormatPipe}}</div>
                   </div>
                   <div class="actions-delete">                   
-                    <span class="actions-links d-none"><img class="action_icon" src="assets/icons/sidemenu/table-refresh.svg"></span>
-                    <span class="actions-links" (click)="deletePages('source',source,$event)"><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
+                    <span class="actions-links d-none"><img class="action_icon" ngbTooltip='Refresh'src="assets/icons/sidemenu/table-refresh.svg"></span>
+                    <span class="actions-links" (click)="deletePages('source',source,$event)" ngbTooltip='delete'><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
                 </div>
                 </div>
               </div>
@@ -227,7 +227,7 @@
                     <input type="text" placeholder="Search" class="input-search" [(ngModel)]="pagesSearch">
                     <img src="assets/images/search-input.svg" class="search-icon">
                   </div>
-                  <div class="add-page"><img src="assets/icons/sidemenu/plus-table.svg">Add Page</div>
+                  <!-- <div class="add-page"><img src="assets/icons/sidemenu/plus-table.svg">Add Page</div> -->
                 </div>
               </div>
               <div *ngIf= "isConfig">
@@ -279,8 +279,8 @@
                             {{page.url || selectedSource.url}}</div>
                           <div class="col-2 date">{{page.createdOn | dateFormatPipe}}</div>
                           <div class="col-2 actions">
-                            <img src="assets/icons/sidemenu/table-refresh.svg">
-                            <img src="assets/icons/sidemenu/delete-table.svg" (click)="deletePages('pages',page ,$event)">
+                            <img src="assets/icons/sidemenu/table-refresh.svg" ngbTooltip='Refresh'>
+                            <img src="assets/icons/sidemenu/delete-table.svg" (click)="deletePages('pages',page ,$event)" ngbTooltip='delete'>
                           </div>
                         </div>
                       </a>
