add alternate quest and followup quest

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -103,7 +103,7 @@
         <button class="kr-sg-button-secondary btn_lg" (click)="cancel()">Cancel</button>
       </div>
       <div class="right-btns">        
-        <button class="kr-sg-button-secondary btn_lg mr-0"><img src="assets/icons/editor/plus-add.svg" class="mr-2">Another Bot Response</button>
+        <button class="kr-sg-button-secondary btn_lg mr-0 d-none"><img src="assets/icons/editor/plus-add.svg" class="mr-2">Another Bot Response</button>
       </div>
     </div>
   </form>
