--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -59,7 +59,7 @@
                             <div id="accordion" class="accordion-content">
                                 <div *ngFor="let faq of faqs">
                                     <div class="card-content" *ngIf="faq.action!=='delete'">
-                                        <div [attr.id]="'faqquestionAcc' + faq._id" (click)="selectedFaqToTrain(faq)"  class="card_link collapsed" [ngClass]="{'is-checked': ((faqSelectionObj && faqSelectionObj.selectedItems[faq._id]) || faqSelectionObj.selectAll)}" data-toggle="collapse" [attr.data-target]="'#'+faq._id" [attr.aria-controls]="collapseOne">      
+                                        <div [attr.id]="'faqquestionAcc' + faq._id" (click)="selectedFaqToTrain(faq, $event)"  class="card_link collapsed" [ngClass]="{'is-checked': ((faqSelectionObj && faqSelectionObj.selectedItems[faq._id]) || faqSelectionObj.selectAll)}" data-toggle="collapse" [attr.data-target]="'#'+faq._id" [attr.aria-controls]="collapseOne">      
                                             <span class="published-que" *ngIf="(faq.state==='published')" [ngClass]="{'reverted': (faq.state==='reverted')}">{{faq.state | titlecase}}</span>
                                             <div class="d-flex align-items-center">
                                                 <div class="kr-sg-checkbox" (click)="$event.stopImmediatePropagation();">
@@ -80,7 +80,6 @@
                                                         <div class="desc">{{altQuestion.answer}}</div>
                                                     </div>
                                                 </ng-container>
-                                                <div class="divBlockEmptylastChild emptyAltQuestions"> No Alternate Questions</div>
                                             </div>
                                         </div>
                                     </div> 
@@ -215,9 +214,9 @@
                         </div>
                     </div>
                     <perfect-scrollbar class="train-questions-body-scroll" #editQaScrollContainer>               
-                        <div class="body-content">
+                        <div class="body-content" id="questionList">
                             <app-add-faq (editFaq)="editFaq($event)" [faqData]="selectedFaq" (cancelfaqEvent)="faqCancle()" *ngIf="editfaq && selectedFaq"></app-add-faq>
-                            <div class="body-top-content">
+                            <div class="body-top-content" *ngIf="!editfaq">
                                 <div class="question-content">
                                     <div class="title-que">
                                         <span class="">{{selectedFaq.question}}</span>
@@ -254,16 +253,19 @@
                                     <div class="added-tags text-truncate">Add alternate forms of the question, key tags and add synonyms.</div>
                                 </div>
                                 <div class="col-2 p-0 text-right">
-                                    <button class="kr-sg-button-primary btn_lg">Add</button>
+                                    <button class="kr-sg-button-primary btn_lg" (click)="addAlternate()">Add</button>
                                 </div>
                             </div>
-                            <ng-container *ngIf="selectedFaq.alternateQuestions && selectedFaq.alternateQuestions.length">
-                            <div class="added-questions-list" *ngFor="let alternateQuestion of selectedFaq.alternateQuestions">
+                            <div *ngIf="selectedFaq.isAlt">
+                                <app-add-alternate-question [faqServ]="faqServiceAlt"></app-add-alternate-question>
+                            </div>
+                            <ng-container *ngIf="selectedFaq.alternateQuestions?.length">
+                            <div class="added-questions-list" *ngFor="let alternateQuestion of selectedFaq?.alternateQuestions">
                                 <div class="question-name text-truncate">{{alternateQuestion.question}}</div>
                                 <div class="added-tags text-truncate">
-                                    <span class="tags-data" *ngFor="let keyword of alternateQuestion.keywords">{{keyword}}</span>
+                                    <span class="tags-data" *ngFor="let keyword of alternateQuestion?.keywords">#{{keyword.keyword}}&nbsp;</span>
                                 </div>
-                                <img src="assets/icons/delete-table.svg" class="delete-icon">
+                                <img src="assets/icons/delete-table.svg" (click)="delAltQues(alternateQuestion)" class="delete-icon cursor-pointer">
                             </div>
                            </ng-container>
                             <div class="add-alternative-questions row">
@@ -272,16 +274,20 @@
                                     <div class="added-tags text-truncate">Add followup the question, key tags and add synonyms.</div>
                                 </div>
                                 <div class="col-2 p-0 text-right">
-                                    <button class="kr-sg-button-primary btn_lg">Add</button>
+                                    <button class="kr-sg-button-primary btn_lg" (click)="addFollowUp()">Add</button>
                                 </div>
                             </div>
-                            <ng-container *ngIf="selectedFaq.followupQuestions && selectedFaq.followupQuestions.length">
-                                <div class="added-questions-list">
-                                    <div class="question-name text-truncate">How do I access my account online at Citibank Online?</div>
+                            <div *ngIf="selectedFaq.isAddFollow">
+                                <app-add-alternate-question [faqServ]="faqServiceFollow"></app-add-alternate-question>
+                            </div>
+
+                            <ng-container *ngIf="selectedFaq.followupQuestions?.length">
+                                <div class="added-questions-list" *ngFor="let followQues of selectedFaq.followupQuestions">
+                                    <div class="question-name text-truncate">{{followQues.question}}</div>
                                     <div class="added-tags text-truncate">
-                                        <span class="tags-data" *ngFor="let keyword of followupQuestions.keywords">{{keyword}}</span>
+                                        <span class="tags-data" *ngFor="let keyword of followQues?.keywords">#{{keyword.keyword}}&nbsp;</span>
                                     </div>
-                                    <img src="assets/icons/delete-table.svg" class="delete-icon">
+                                    <img src="assets/icons/delete-table.svg" (click)="delFollowQues(followQues)" class="delete-icon cursor-pointer">
                                 </div>
                             </ng-container>
                         </div>
