--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -21,6 +21,9 @@
 }
 
 .faqmain-container{
+    .cursor-pointer {
+        cursor: pointer;
+    }
     .faqsListContainer{
         .faq-header-sec{
             background: #F8F9FA;
