--- a/findly-builder/src/app/components/faqs/add-alternate-question/add-alternate-question.component.html
+++ b/findly-builder/src/app/components/faqs/add-alternate-question/add-alternate-question.component.html
@@ -1,5 +1,5 @@
 <div class="alternative-question">
-    <form [formGroup]="form">
+    <form>
         <div class="kr-sg-input-text">
             <div class="label-text">Question</div>
             <input type="text" placeholder="Placeholder text" class="input-text" [(ngModel)]='f.question' formControlName="question">
