--- a/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
@@ -9357,6 +9357,7 @@ body::-webkit-scrollbar {
     white-space: nowrap;
     text-overflow: ellipsis;
     max-width: 100%;
+    height: 17px;
   }
   .matched-faq-containers .faqs-shadow .faqs-bottom-actions {
     padding: 8px 0px 8px 0px;
@@ -9410,6 +9411,7 @@ body::-webkit-scrollbar {
   }
   .matched-pages-container .faqs-shadow .faqs-wrp-content .image-url-sec img {
     width: 100%;
+    background: #eee;
   }
   .matched-pages-container .faqs-shadow .faqs-wrp-content .pages-content {
     display: inline-block;
@@ -9420,16 +9422,19 @@ body::-webkit-scrollbar {
     float: left;
   }
   .matched-pages-container .faqs-shadow .faqs-wrp-content .pages-content .title {
-    overflow: auto;
+    overflow: hidden;
     white-space: normal;
     text-overflow: ellipsis;
     max-width: 100%;
+    height: 15px;
   }
   .matched-pages-container .faqs-shadow .faqs-wrp-content .pages-content .desc-info {
-    overflow: auto;
+    overflow: hidden;
     white-space: normal;
     text-overflow: ellipsis;
     max-width: 100%;
+    height: 37px;
+    line-height: 20px;
   }
   
   .show-in-findly{
