--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -19,43 +19,135 @@
     background-image:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABxSURBVHgBhZDBDYAgDEV/xAXcoKs4iW7gCqzgRLiGJ7160hH8ak1IAW3yGiiPUOoADGQjB/IhpKuYGhK0kJOCOnd4shhZtObt7VguSlb+lN7ndkXigxpp46Pur3VLVvw07mE+mJMS2TH1ZC6IE54ZyglkyhuCR14v1QAAAABJRU5ErkJggg==');
 }
 .search-container{
-    left: 50px !important;  
+    left: 63px !important;  
 }
-.search-container.conversation .search-body .matched-faq-containers .faqs-shadow .faqs-bottom-actions{
+.faqs-bottom-actions {   
+    display: table !important;
+}
+.search-container.conversation .search-body .faqs-bottom-actions{
+    display: none !important;
+}
+.search-container.conversation.advanced-mode .faqs-bottom-actions{
+    display: none !important;
+}
+.search-container.conversation.full-page .faqs-bottom-actions{
     display: none !important;
 }
 .search-background-div{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 80px);
     background: #ffffff;
     position: absolute;
-    top: 0;
+    top: 80px;
     border: 0;
     display: none;
     z-index: 999;
 }
-
+.search-container #searchChatContainer{
+    height: calc(100vh - 243px);
+}
 #searchChatContainer .action-wrp{
     /* display: block !important; */
 }
-
-.rank-bar-item{
-    display: inline;
-    padding: 1px 10px;
-    /* background: #716d6d; */
-    border-radius: 15px;
-    color: #ffff;
-    cursor: pointer;
-}
-
-
-.matched-faq-containers .faqs-shadow .faqs-bottom-actions {   
-    display: block !important;
+.search-container.conversation.active{
+    box-shadow: -7px 4px 30px rgba(18, 61, 101, 0.2), inset -8px -6px 80px rgba(255, 255, 255, 0.18) !important;
 }
 
 .show-in-findly{
     display: block !important;
 }
-img.show-in-findly{    
+img.logo-img{    
     margin-right: 10px;
 }
+
+.search-container.conversation #searchChatContainer .messageBubble .botMessage .bot_Img{
+    margin-top: -2px;
+}
+
+.search-container.conversation .search-body .resultsButtons .suggestion_actions_container, .search-container.advanced-mode .suggestion_actions_container{
+    display: block;
+    width: 100%;
+  }
+  .search-container.conversation .search-body .resultsButtons .suggestion_actions_container .btn_block_actions, .search-container.advanced-mode .suggestion_actions_container .btn_block_actions{
+    display: block;
+  }
+  .search-container.conversation .search-body .resultsButtons .suggestion_actions_container .btn_block_actions .action-wrp, .search-container.advanced-mode .suggestion_actions_container .btn_block_actions .action-wrp {
+    display: inline;
+    background: transparent;
+    box-shadow: none;
+    border-radius: 0px;
+    padding: 0;
+    margin-bottom: 0px;
+  }
+  .search-container.conversation .search-body .resultsButtons .suggestion_actions_container .btn_block_actions .action-wrp .search-task, .search-container.advanced-mode .suggestion_actions_container .btn_block_actions .action-wrp .search-task  {
+    margin: 0 10px 10px 0;
+  }
+
+.resultsButtons .suggestion_actions_container {
+    display: block;
+    width: 100%;
+  }
+  .resultsButtons .suggestion_actions_container .btn_block_actions {
+    display: block;
+  }
+  .resultsButtons .suggestion_actions_container .btn_block_actions .action-wrp {
+    display: block;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.07), 0px 0px 10.0172px rgba(0, 0, 0, 0.035);
+    border-radius: 8px;
+    padding: 18px 0 15px 0;
+    margin-bottom: 15px;
+  }
+  .resultsButtons .suggestion_actions_container .btn_block_actions .action-wrp .search-task {
+    margin: 0 18px;
+  }
+  .resultsButtons .suggestion_actions_container .btn_block_actions .action-wrp .faqs-bottom-actions {
+    padding: 3px 0 0 0;
+  }
+  .resultsButtons .suggestion_actions_container .btn_block_actions .action-wrp .faqs-bottom-actions .appearences {
+    padding-left: 18px;
+  }
+  .resultsButtons .suggestion_actions_container .btn_block_actions .action-wrp .faqs-bottom-actions .actions {
+    padding-right: 18px;
+  }
+
+  .search-container.conversation.full-page {
+    position: fixed;
+    left: 0 !important;
+    top: 0;
+    z-index: 999999;
+    padding: 25px 0 0px 60px;
+    height: 100%;
+  }
+  .search-container.conversation.full-page .ksa-resultsContainer {
+    height: calc(100vh - 120px);
+    padding: 0 60px 0 15px;
+  }
+  .search-container.conversation.full-page .ksa-results-tabesHeader .title-backbutton {
+    padding-right: 60px;
+  }
+  
+ 
+  .kr-sg-toggle.advancemode-checkbox{
+    width: 30px;
+    height: 16px;
+    position: absolute;
+    top: 80px;
+    z-index: 999;
+    left: 762px;
+  }
+  .kr-sg-toggle.advancemode-checkbox .slider{
+    background-color: #D9D9D9;
+    border: 1px solid #808080;
+  }
+  .kr-sg-toggle.advancemode-checkbox .slider::before{
+    height: 12px;
+    top: 1px;
+    width: 12px;
+    left: 2px;
+  }
+  .kr-sg-toggle.advancemode-checkbox input:checked+.slider{
+    background-color: #8BB7F0;
+    box-shadow: 0 0 1px #8BB7F0;
+    border: 1px solid #4E7AB5;
+  }
